Nest Sign Up button in html file into <div> to prevent button from stretching to fill container

--- a/styles.css
+++ b/styles.css
@@ -54,9 +54,11 @@ button.sign-up {
     border-radius: 8px;
     background-color: blue;
     color: white;
+    flex: 1, 1, 0px;
 }
 
 .intro-left {
+    display: flex;
     flex-direction: column;
 }
 
